@startuml

interface CriterioPertenencia {
+ aplicarCriterio(): List<Hecho>
}

class CriterioTitulo implements CriterioPertenencia{
- palabraClave: String

+ aplicarCriterio(List<Hecho> hechos): List<Hecho>
}

class CriterioFecha implements CriterioPertenencia{
- desde: LocalDate
- hasta: LocalDate

+ aplicarCriterio(List<Hecho> hechos): List<Hecho>
}
class CriterioUbicacion implements CriterioPertenencia{
- latitud: Double
- longitud: Double

+ aplicarCriterio(List<Hecho> hechos): List<Hecho>
}

class CriterioCategoria  implements CriterioPertenencia{
- categoria: String

+ aplicarCriterio(List<Hecho> hechos): List<Hecho>
}

class CriterioDescripcion implements CriterioPertenencia{
- palabraClave: String

+ aplicarCriterio(List<Hecho> hechos): List<Hecho>
}

class Hecho {
- titulo: String
- descripcion: String
- categoria: Categoria
- lugarAcontecimiento: Ubicacion
- fechaAcontecimiento: LocalDate
- etiquetas: List<String>
}

class Ubicacion {
- Latitud: Double
- Longitud: Double
}

class Categoria {
- nombre: String
}
Ubicacion --* Hecho
Categoria --* Hecho

class UsuarioApiCatedraInputDTO {
- email: String
- password: String
}

interface IApiCatedraService {
+ login(UsuarioMetamapaInputDTO usuario): LoginResponseDTO
+ getDesastreById(Integer id): HechoOutputDTO
+ getHechosByPage(Integer currentPage): List<HechoOutputDTO)
+ getHechos(): List<HechoOutputDTO)
}

class ApiCatedraServiceService implements IApiCatedraService {
- webClient: WebClient

+ login(UsuarioMetamapaInputDTO usuario): LoginResponseDTO
+ getDesastreById(Integer id): HechoOutputDTO
+ getHechosByPage(Integer currentPage): List<HechoOutputDTO)
}

class UsuarioMetamapaInput {
- email: String
- password: String
}

ApiCatedraServiceService --> UsuarioMetamapaInput
IApiCatedraService --> UsuarioApiCatedraInputDTO
@enduml